--- a/requirements.txt
+++ b/requirements.txt
@@ -1,136 +1,65 @@
+alembic==1.10.2
 anyascii==0.3.2
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-arrow==1.2.3
-asttokens==2.2.1
-attrs==22.2.0
-backcall==0.2.0
-beautifulsoup4==4.11.2
-bleach==6.0.0
-certifi @ file:///croot/certifi_1671487769961/work/certifi
-cffi==1.15.1
-charset-normalizer==2.1.1
+charset-normalizer==3.1.0
 click==8.1.3
-cmake==3.25.0
-comm==0.1.2
+cloudpickle==2.2.1
 contourpy==1.0.7
 contractions==0.1.73
 cycler==0.11.0
-debugpy==1.6.6
-decorator==5.1.1
-defusedxml==0.7.1
-exceptiongroup==1.1.1
-executing==1.2.0
-fastjsonschema==2.16.3
-filelock==3.9.0
+databricks-cli==0.17.5
+docker==6.0.1
+entrypoints==0.4
 Flask==2.2.3
 fonttools==4.39.2
-fqdn==1.5.1
-h5py==3.8.0
+gitdb==4.0.10
+GitPython==3.1.31
+greenlet==2.0.2
+gunicorn==20.1.0
 idna==3.4
-imageio==2.26.0
 importlib-metadata==6.1.0
 importlib-resources==5.12.0
-iniconfig==2.0.0
-ipykernel==6.21.3
-ipython==8.11.0
-ipython-genutils==0.2.0
-ipywidgets==8.0.4
-isoduration==20.11.0
 itsdangerous==2.1.2
-jedi==0.18.2
 Jinja2==3.1.2
 joblib==1.2.0
-jsonpointer==2.3
-jsonschema==4.17.3
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.6.3
-jupyter_client==8.0.3
-jupyter_core==5.3.0
-jupyter_server==2.5.0
-jupyter_server_terminals==0.4.4
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==3.0.5
 kiwisolver==1.4.4
-lazy_loader==0.1
-lit==15.0.7
+llvmlite==0.39.1
+Mako==1.2.4
+Markdown==3.4.1
 MarkupSafe==2.1.2
 matplotlib==3.7.1
-matplotlib-inline==0.1.6
-mistune==2.0.5
-mpmath==1.2.1
-nbclassic==0.5.3
-nbclient==0.7.2
-nbconvert==7.2.10
-nbformat==5.7.3
-nest-asyncio==1.5.6
-networkx==3.0
+mlflow==2.2.2
 nltk==3.8.1
-notebook==6.5.3
-notebook_shim==0.2.2
-numpy==1.24.1
-opencv-python==4.7.0.72
+numba==0.56.4
+numpy==1.23.5
+oauthlib==3.2.2
 packaging==23.0
-pandocfilters==1.5.0
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.3.0
-platformdirs==3.1.1
-pluggy==1.0.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-psutil==5.9.4
-ptyprocess==0.7.0
-pure-eval==0.2.2
+pandas==1.5.3
+Pillow==9.4.0
+protobuf==4.22.1
 pyahocorasick==2.0.0
-pycparser==2.21
-Pygments==2.14.0
+pyarrow==11.0.0
+PyJWT==2.6.0
 pyparsing==3.0.9
-pyrsistent==0.19.3
-pytest==7.2.2
 python-dateutil==2.8.2
-python-json-logger==2.0.7
-PyWavelets==1.4.1
+pytz==2022.7.1
 PyYAML==6.0
-pyzmq==25.0.1
-qtconsole==5.4.1
-QtPy==2.3.0
+querystring-parser==1.2.4
 regex==2022.10.31
-requests==2.28.1
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-image==0.20.0
+requests==2.28.2
 scikit-learn==1.2.2
-scipy==1.9.1
-Send2Trash==1.8.0
+scipy==1.10.1
+shap==0.41.0
 six==1.16.0
-sniffio==1.3.0
-soupsieve==2.4
-stack-data==0.6.2
-sympy==1.11.1
-terminado==0.17.1
+slicer==0.0.7
+smmap==5.0.0
+SQLAlchemy==2.0.7
+sqlparse==0.4.3
+tabulate==0.9.0
 textsearch==0.0.24
 threadpoolctl==3.1.0
-tifffile==2023.3.15
-tinycss2==1.2.1
-tomli==2.0.1
-torch==2.0.0+cu118
-torchaudio==2.0.1+cu118
-torchvision==0.15.1+cu118
-tornado==6.2
 tqdm==4.65.0
-traitlets==5.9.0
-triton==2.0.0
-typing_extensions==4.4.0
-uri-template==1.2.0
-urllib3==1.26.13
-wcwidth==0.2.6
-webcolors==1.12
-webencodings==0.5.1
+typing_extensions==4.5.0
+urllib3==1.26.15
 websocket-client==1.5.1
 Werkzeug==2.2.3
-widgetsnbextension==4.0.5
 zipp==3.15.0
