--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.10.2
 anyascii==0.3.2
+attrs==22.2.0
 charset-normalizer==3.1.0
 click==8.1.3
 cloudpickle==2.2.1
@@ -9,6 +10,7 @@ cycler==0.11.0
 databricks-cli==0.17.5
 docker==6.0.1
 entrypoints==0.4
+exceptiongroup==1.1.1
 Flask==2.2.3
 fonttools==4.39.2
 gitdb==4.0.10
@@ -18,6 +20,7 @@ gunicorn==20.1.0
 idna==3.4
 importlib-metadata==6.1.0
 importlib-resources==5.12.0
+iniconfig==2.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 joblib==1.2.0
@@ -35,11 +38,13 @@ oauthlib==3.2.2
 packaging==23.0
 pandas==1.5.3
 Pillow==9.4.0
+pluggy==1.0.0
 protobuf==4.22.1
 pyahocorasick==2.0.0
 pyarrow==11.0.0
 PyJWT==2.6.0
 pyparsing==3.0.9
+pytest==7.2.2
 python-dateutil==2.8.2
 pytz==2022.7.1
 PyYAML==6.0
@@ -57,6 +62,7 @@ sqlparse==0.4.3
 tabulate==0.9.0
 textsearch==0.0.24
 threadpoolctl==3.1.0
+tomli==2.0.1
 tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==1.26.15
