--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ click==8.1.3
 cloudpickle==2.2.1
 contourpy==1.0.7
 contractions==0.1.73
+coverage==7.2.2
 cycler==0.11.0
 databricks-cli==0.17.5
 docker==6.0.1
